[gd_scene load_steps=2 format=3 uid="uid://c7x8r9v5y3m2n"]

[ext_resource type="Script" path="res://Scripts/UI/DiplomacyPanel.gd" id="1_diplomacy_panel"]

[node name="DiplomacyPanel" type="Panel"]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -400.0
offset_top = -300.0
offset_right = 400.0
offset_bottom = 300.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_diplomacy_panel")

[node name="Background" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
color = Color(0.1, 0.1, 0.2, 0.95)

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 10.0
offset_top = 10.0
offset_right = -10.0
offset_bottom = -10.0

[node name="HeaderContainer" type="HBoxContainer" parent="VBoxContainer"]
layout_mode = 2
size_flags_vertical = 0

[node name="TitleLabel" type="Label" parent="VBoxContainer/HeaderContainer"]
layout_mode = 2
size_flags_horizontal = 3
text = "Diplomacia y Relaciones Exteriores"
add_theme_font_size_override("font_size", 18)

[node name="CloseButton" type="Button" parent="VBoxContainer/HeaderContainer"]
layout_mode = 2
text = "Cerrar"
custom_min_size = Vector2(80, 30)

[node name="HSeparator" type="HSeparator" parent="VBoxContainer"]
layout_mode = 2

[node name="ContentContainer" type="HBoxContainer" parent="VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3

[node name="MainContent" type="HBoxContainer" parent="VBoxContainer/ContentContainer"]
layout_mode = 2
size_flags_horizontal = 3

[node name="NationsContainer" type="VBoxContainer" parent="VBoxContainer/ContentContainer/MainContent"]
layout_mode = 2
size_flags_horizontal = 3

[node name="NationsHeader" type="Label" parent="VBoxContainer/ContentContainer/MainContent/NationsContainer"]
layout_mode = 2
text = "Naciones"
add_theme_font_size_override("font_size", 14)

[node name="HSeparator" type="HSeparator" parent="VBoxContainer/ContentContainer/MainContent/NationsContainer"]
layout_mode = 2

[node name="NationsScroll" type="ScrollContainer" parent="VBoxContainer/ContentContainer/MainContent/NationsContainer"]
layout_mode = 2
size_flags_vertical = 3

[node name="NationsList" type="VBoxContainer" parent="VBoxContainer/ContentContainer/MainContent/NationsContainer/NationsScroll"]
layout_mode = 2
size_flags_horizontal = 3

[node name="VSeparator" type="VSeparator" parent="VBoxContainer/ContentContainer/MainContent"]
layout_mode = 2

[node name="RelationsContainer" type="VBoxContainer" parent="VBoxContainer/ContentContainer/MainContent"]
layout_mode = 2
size_flags_horizontal = 3

[node name="RelationsHeader" type="Label" parent="VBoxContainer/ContentContainer/MainContent/RelationsContainer"]
layout_mode = 2
text = "Relaciones Activas"
add_theme_font_size_override("font_size", 14)

[node name="HSeparator" type="HSeparator" parent="VBoxContainer/ContentContainer/MainContent/RelationsContainer"]
layout_mode = 2

[node name="RelationsScroll" type="ScrollContainer" parent="VBoxContainer/ContentContainer/MainContent/RelationsContainer"]
layout_mode = 2
size_flags_vertical = 3

[node name="RelationsDisplay" type="VBoxContainer" parent="VBoxContainer/ContentContainer/MainContent/RelationsContainer/RelationsScroll"]
layout_mode = 2
size_flags_horizontal = 3

[node name="VSeparator2" type="VSeparator" parent="VBoxContainer/ContentContainer/MainContent"]
layout_mode = 2

[node name="RightPanel" type="VBoxContainer" parent="VBoxContainer/ContentContainer"]
layout_mode = 2
size_flags_horizontal = 3

[node name="ProposalsContainer" type="VBoxContainer" parent="VBoxContainer/ContentContainer/RightPanel"]
layout_mode = 2
size_flags_vertical = 3

[node name="ProposalsHeader" type="Label" parent="VBoxContainer/ContentContainer/RightPanel/ProposalsContainer"]
layout_mode = 2
text = "Propuestas Diplomáticas"
add_theme_font_size_override("font_size", 14)

[node name="HSeparator" type="HSeparator" parent="VBoxContainer/ContentContainer/RightPanel/ProposalsContainer"]
layout_mode = 2

[node name="ProposalsScroll" type="ScrollContainer" parent="VBoxContainer/ContentContainer/RightPanel/ProposalsContainer"]
layout_mode = 2
size_flags_vertical = 3

[node name="ProposalsList" type="VBoxContainer" parent="VBoxContainer/ContentContainer/RightPanel/ProposalsContainer/ProposalsScroll"]
layout_mode = 2
size_flags_horizontal = 3

[node name="HSeparator2" type="HSeparator" parent="VBoxContainer/ContentContainer/RightPanel"]
layout_mode = 2

[node name="EventsContainer" type="VBoxContainer" parent="VBoxContainer/ContentContainer/RightPanel"]
layout_mode = 2
size_flags_vertical = 3

[node name="EventsHeader" type="Label" parent="VBoxContainer/ContentContainer/RightPanel/EventsContainer"]
layout_mode = 2
text = "Eventos Diplomáticos Recientes"
add_theme_font_size_override("font_size", 14)

[node name="HSeparator" type="HSeparator" parent="VBoxContainer/ContentContainer/RightPanel/EventsContainer"]
layout_mode = 2

[node name="EventsScroll" type="ScrollContainer" parent="VBoxContainer/ContentContainer/RightPanel/EventsContainer"]
layout_mode = 2
size_flags_vertical = 3

[node name="EventsList" type="VBoxContainer" parent="VBoxContainer/ContentContainer/RightPanel/EventsContainer/EventsScroll"]
layout_mode = 2
size_flags_horizontal = 3